TestForce/src/objects/Performance_Log_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Log__c</fullName>
        <label>Performance Log</label>
        <referenceTo>Performance_Log__c</referenceTo>
        <relationshipLabel>Performance Log Parameters</relationshipLabel>
        <relationshipName>Performance_Log_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Performance Log Parameter</label>
    <nameField>
        <displayFormat>PerfLogParam-{0000000}</displayFormat>
        <label>Performance Log Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Log Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>